--- a/HTML-2/forms_and_labels(2).html
+++ b/HTML-2/forms_and_labels(2).html
@@ -16,7 +16,7 @@
             <!--Better way to add a label
             for and id should be same for label to connect-->
             <label for = "userInput">
-                <input id = "userInput" name="userInput" placeholder="Enter your name">
+                <input id = "userInput" name="userInput" placeholder="Enter your name" required>
             </label>
             <br>
             <label for = "submit">
